--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,14 @@
   border-radius: 0 !important;
 }
 
+@media screen and (max-width: 768px) {
+  .swiper-pagination-bullet {
+    width: 5px !important;
+    height: 5px !important;
+    border-radius: 9999px !important;
+  }
+}
+
 canvas {
   z-index: 1000;
 }
