--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,10 @@
 canvas {
   z-index: 1000;
 }
+.thumb .swiper-slide {
+  opacity: 0.4;
+}
+
+.thumb .swiper-slide-thumb-active {
+  opacity: 1 !important;
+}
